# cmake-modules-std23

./: CMakeLists.txt  README.md  run.sh
shared/: CMakeLists.txt  run.sh
shared_multiple/: CMakeLists.txt  run.sh
shared_multiple/calc/: CMakeLists.txt
shared_multiple/calc/src/: calc.cpp  calc.ixx  test.cpp
shared_multiple/demos/: CMakeLists.txt
single/: CMakeLists.txt
src/: main.cpp  oper.ixx
